# AdventOfCode2025

./: CMakeLists.txt  compile_commands.json  run.sh
include/: day1.hpp  day2.hpp
src/: day1.cpp  day2.cpp  main.cpp
